kubernetes-networks/canary/deploy-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-1
  template:
    metadata:
      labels:
        app: deploy-1
        dep: canary
    spec:
      containers:
        - name: deploy-1
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
          ports:
            - containerPort: 8080
