kubernetes-networks/canary/deploy-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-2
  template:
    metadata:
      labels:
        app: deploy-2
        dep: canary
    spec:
      containers:
        - name: deploy-2
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
          ports:
            - containerPort: 8080
