kubernetes-networks/canary/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-1
  labels:
    app: svc-1
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: deploy-1
