kubernetes-networks/canary/service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-2
  labels:
    app: svc-2
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: deploy-2
