kubernetes-networks/canary/service-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-main
  labels:
    app: svc-main
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    dep: canary
