kubernetes-networks/canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "80"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: svc-2
              servicePort: 80
