kubernetes-networks/canary/ingress-production.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prod-ingress
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /
            backend:
              serviceName: svc-1
              servicePort: 80
